lang/derive/tests/ui/fail/03-union.stderr
error: unions are not supported to derive from `InOut` or `State`
 --> $DIR/03-union.rs:6:1
  |
6 | union MyUnion {
  | ^^^^^
